force-app/main/default/objects/TrackIT__Transaction__c/TrackIT__Transaction__c.object-meta.xml
<CustomObject>
    <description>Stores item transaction records in Facility Manager</description>
    <label>Item Transaction</label>
    <nameField>
        <label>Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>