force-app/main/default/objects/TrackIT__Transaction__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Equipment Item Movements</relationshipLabel>
    <relationshipName>Item_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>