force-app/main/default/objects/TrackIT__Transaction__c/fields/TrackIT__Item_Number__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Item_Number__c</fullName>
    <description>Master detail relationship for item number</description>
    <label>Item Number</label>
    <referenceTo>TrackIT__Item__c</referenceTo>
    <relationshipName>Transactions_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>