force-app/main/default/objects/TrackIT__Transaction__c/fields/TrackIT__Location__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>TrackIT__Location__c</referenceTo>
    <relationshipName>Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>