force-app/main/default/objects/TrackIT__Transaction__c/fields/TrackIT__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>Fire_Extinguisher</fullName>
                <label>Fire Extinguisher</label>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>