force-app/main/default/objects/TrackIT__Transaction__c/fields/TrackIT__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Transaction_Type__c</fullName>
    <description>Displays the transaction type in Facility Manager</description>
    <label>Transaction Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
            <value>
                <fullName>Move</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>