force-app/main/default/objects/TrackIT__Transaction__c/validationRules/TrackIT__TransactionID_Change_After_Creation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackIT__TransactionID_Change_After_Creation_Rule</fullName>
    <active>true</active>
    <description>Prevents users from changing a Transaction ID after a transaction is initially created.</description>
    <errorConditionFormula>IF(ISNULL( PRIORVALUE( Name )),FALSE,ISCHANGED( Name ) )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Transaction Record ID cannot be changed after initial creation.</errorMessage>
</ValidationRule>