force-app/main/default/objects/TrackIT__Transaction__c/listViews/TrackIT__All.listView-meta.xml
<ListView>
    <fullName>TrackIT__All</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Item_Number__c</columns>
    <columns>TrackIT__Transaction_Type__c</columns>
    <columns>TrackIT__Location__c</columns>
    <columns>TrackIT__To_Location__c</columns>
    <columns>TrackIT__Record_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>