force-app/main/default/objects/TrackIT__Transaction__c/listViews/TrackIT__All_Files.listView-meta.xml
<ListView>
    <fullName>TrackIT__All_Files</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Item_Number__c</columns>
    <columns>TrackIT__Transaction_Type__c</columns>
    <columns>TrackIT__Location__c</columns>
    <columns>TrackIT__To_Location__c</columns>
    <columns>TrackIT__Record_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TrackIT__Record_Type__c</field>
        <operation>equals</operation>
        <value>File</value>
    </filters>
    <label>All Files</label>
    <language>en_US</language>
</ListView>